# step-reduction-plugin

./: .gitignore  _CoqProject  dune-project  rocq-steps.opam  step_reduce.opam
src/: compat.ml  compat.mli  dune  g_step_reduce.mlg  g_steps.mlg  step.ml  step.mli
tests/: Test.v
theories/: Loader.v  dune
